--- a/scss/layout/_spinning.scss
+++ b/scss/layout/_spinning.scss
@@ -15,20 +15,40 @@
     display: flex;
     gap: 15px;
     transition: 0.5s;
-}
 
-.box__img__spinning img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    filter: blur(5px);
-    transition: 0.5s;
+    &:hover img {
+        filter: blur(0);
+        width: 400px;
+        height: 500px;
+    }
+
+    &:hover {
+        background-color: cadetblue;
+        box-shadow: 3px 3px 13px 5px rgba(20, 20, 73, 0.603);
+    }
+
+    &:nth-child(even){
+        flex-direction: row-reverse;
+        background-color: bisque;
+    }
+
+    &:nth-child(even):hover {
+        background-color: blanchedalmond;
+    }
 }
 
 .box__img__spinning {
     width: 50%;
     height: 300px;
     overflow: hidden;
+
+    & img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        filter: blur(5px);
+        transition: 0.5s;
+    }
 }
 
 
@@ -38,26 +58,4 @@
     justify-content: center;
     gap: 15px;
     width: 50%;
-}
-
-.box__spinning:hover img {
-    filter: blur(0);
-    width: 400px;
-    height: 500px;
-}
-.box__spinning:hover {
-    background-color: cadetblue;
-    box-shadow: 3px 3px 13px 5px rgba(20, 20, 73, 0.603);
-}
-
-.box__spinning:nth-child(even){
-    flex-direction: row-reverse;
-    background-color: bisque;
-}
-
-.box__spinning:nth-child(even):hover {
-
-    background-color: blanchedalmond;
-
-
 }
