--- a/css/style.css
+++ b/css/style.css
@@ -717,40 +717,6 @@ body {
   width: 50%;
 }
 
-@media (max-width: 300px) {
-  .hero article {
-    width: 100%;
-  }
-  .hero__crossfit article {
-    width: 100%;
-  }
-  .grid__boxeo {
-    display: inherit;
-  }
-  .grid__contacto {
-    display: inherit;
-  }
-  .card {
-    width: 80%;
-  }
-  .form__container {
-    flex-direction: row-reverse;
-  }
-  form {
-    width: 50%;
-  }
-  .form__container iframe {
-    width: 50%;
-    min-height: 600px;
-    max-height: 100%;
-  }
-  .grid__crossfit {
-    display: inherit;
-  }
-  .box__crossfit {
-    width: 105%;
-  }
-}
 @media (max-width: 480px) {
   .hero article {
     width: 100%;
@@ -762,14 +728,35 @@ body {
     width: 90%;
   }
   .form__container {
-    flex-direction: row-reverse;
+    flex-direction: column;
+    text-align: center;
   }
-  form {
-    width: 50%;
+  .form__container form {
+    padding: 30px 80px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    font-size: 18px;
+  }
+  .form p {
+    font-size: 14px;
+    color: grey;
+    margin-bottom: 14px;
+  }
+  .form__container label {
+    font-size: 14px;
+    color: grey;
+    align-self: flex-end;
+    margin-bottom: 15px;
+  }
+  .form__container input {
+    width: 100%;
+    padding: 0;
   }
   .form__container iframe {
-    width: 50%;
-    min-height: 600px;
+    width: 100%;
+    height: 100%;
+    min-height: 300px;
     max-height: 100%;
   }
   .grid__boxeo {
@@ -793,14 +780,35 @@ body {
     grid-auto-flow: dense;
   }
   .form__container {
-    flex-direction: row-reverse;
+    flex-direction: column;
+    text-align: center;
   }
-  form {
-    width: 50%;
+  .form__container form {
+    padding: 30px 80px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    font-size: 18px;
+  }
+  .form p {
+    font-size: 14px;
+    color: grey;
+    margin-bottom: 14px;
+  }
+  .form__container label {
+    font-size: 14px;
+    color: grey;
+    align-self: flex-end;
+    margin-bottom: 15px;
+  }
+  .form__container input {
+    width: 100%;
+    padding: 0;
   }
   .form__container iframe {
-    width: 50%;
-    min-height: 600px;
+    width: 100%;
+    height: 100%;
+    min-height: 300px;
     max-height: 100%;
   }
   .grid__boxeo {
@@ -819,14 +827,35 @@ body {
     grid-auto-flow: dense;
   }
   .form__container {
-    flex-direction: row-reverse;
+    flex-direction: column;
+    text-align: center;
   }
-  form {
-    width: 50%;
+  .form__container form {
+    padding: 30px 80px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    font-size: 18px;
+  }
+  .form p {
+    font-size: 14px;
+    color: grey;
+    margin-bottom: 14px;
+  }
+  .form__container label {
+    font-size: 14px;
+    color: grey;
+    align-self: flex-end;
+    margin-bottom: 15px;
+  }
+  .form__container input {
+    width: 100%;
+    padding: 0;
   }
   .form__container iframe {
-    width: 50%;
-    min-height: 600px;
+    width: 100%;
+    height: 100%;
+    min-height: 300px;
     max-height: 100%;
   }
   .grid__boxeo {
@@ -892,6 +921,61 @@ body {
   }
   .grid__crossfit {
     display: grid;
+  }
+}
+@media (max-width: 300px) {
+  .hero article {
+    width: 100%;
+  }
+  .hero__crossfit article {
+    width: 100%;
+  }
+  .grid__boxeo {
+    display: inherit;
+  }
+  .grid__contacto {
+    display: inherit;
+  }
+  .card {
+    width: 80%;
+  }
+  .form__container {
+    flex-direction: column;
+    text-align: center;
+  }
+  .form__container form {
+    padding: 30px 80px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    font-size: 18px;
+  }
+  .form p {
+    font-size: 14px;
+    color: grey;
+    margin-bottom: 14px;
+  }
+  .form__container label {
+    font-size: 14px;
+    color: grey;
+    align-self: flex-end;
+    margin-bottom: 15px;
+  }
+  .form__container input {
+    width: 100%;
+    padding: 0;
+  }
+  .form__container iframe {
+    width: 100%;
+    height: 100%;
+    min-height: 300px;
+    max-height: 100%;
+  }
+  .grid__crossfit {
+    display: inherit;
+  }
+  .box__crossfit {
+    width: 105%;
   }
 }
 
